; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/qedr/extr_main.c_qedr_iw_register_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/qedr/extr_main.c_qedr_iw_register_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qedr_dev = type { %struct.TYPE_3__*, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32 }

@RDMA_NODE_RNIC = common dso_local global i32 0, align 4
@qedr_iw_dev_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qedr_dev*)* @qedr_iw_register_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qedr_iw_register_device(%struct.qedr_dev* %0) #0 {
  %2 = alloca %struct.qedr_dev*, align 8
  store %struct.qedr_dev* %0, %struct.qedr_dev** %2, align 8
  %3 = load i32, i32* @RDMA_NODE_RNIC, align 4
  %4 = load %struct.qedr_dev*, %struct.qedr_dev** %2, align 8
  %5 = getelementptr inbounds %struct.qedr_dev, %struct.qedr_dev* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  store i32 %3, i32* %6, align 4
  %7 = load %struct.qedr_dev*, %struct.qedr_dev** %2, align 8
  %8 = getelementptr inbounds %struct.qedr_dev, %struct.qedr_dev* %7, i32 0, i32 1
  %9 = call i32 @ib_set_device_ops(%struct.TYPE_4__* %8, i32* @qedr_iw_dev_ops)
  %10 = load %struct.qedr_dev*, %struct.qedr_dev** %2, align 8
  %11 = getelementptr inbounds %struct.qedr_dev, %struct.qedr_dev* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.qedr_dev*, %struct.qedr_dev** %2, align 8
  %15 = getelementptr inbounds %struct.qedr_dev, %struct.qedr_dev* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @memcpy(i32 %13, i32 %18, i32 4)
  ret i32 0
}

declare dso_local i32 @ib_set_device_ops(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
